# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "my_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = { git = "https://github.com/apollographql/router.git", branch = "simon/test-harness" } # tag = "v0.15.1" }
clap = "=3.2.10"
async-trait = "0.1"
schemars = "0.8.10"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.34"
futures = "0.3.21"
http = "0.2.8"
